# colab_learning

./: MultiVariateAnomalyDetection.ipynb  MultiVariateAnomalyDetection_simple.ipynb  README.md  cleanup.txt  main.py  pyproject.toml
.github/: copilot-instructions.md
colab_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
