[project]
name = "colab-learning"
version = "0.1.0"
description = "Learning different Deep Learning models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "keras>=2.14.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.14.1",
    "tensorflow>=2.14.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
]

[tool.setuptools]
packages = []
py-modules = []

[tool.setuptools.exclude-package-data]
"*" = ["data/*", "logs/*"]
